--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -60,7 +60,7 @@
           type: 'date'
         }, 
         yaxis: {
-          autorange: true, 
+          fixedrange: false,
           range: [0,1],
           type: 'linear',
 
